# LinAlgCPP

./: .gitignore  CMakeLists.txt  CREDITS.md  Matrix.cpp  README.md  main.cpp
classes/: ComplexNumber.cpp  ComplexNumber.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h  VectorEquation.cpp  VectorEquation.h  VectorMatrix.cpp  VectorMatrix.h
files/: input.txt
